# HOCBF-Helper

./: CMakeLists.txt  CMakeLists_bak.txt  README.md  setup.py
src/: elliposoidAndLogSumExp3dPrb.cpp  elliposoidAndLogSumExp3dPrb.hpp  ellipsoidAndEllipsoid3dPrb.cpp  ellipsoidAndEllipsoid3dPrb.hpp  ellipsoidAndHyperplane2dPrb.cpp  ellipsoidAndHyperplane2dPrb.hpp  ellipsoidAndHyperplane3dPrb.cpp  ellipsoidAndHyperplane3dPrb.hpp  ellipsoidAndLogSumExp2dPrb.cpp  ellipsoidAndLogSumExp2dPrb.hpp  ellipsoidAndLogSumExp3dPrb.cpp  ellipsoidAndLogSumExp3dPrb.hpp  main.cpp  main1.cpp  main2.cpp  main3.cpp  problem2d.cpp  problem2d.hpp  problem2dCollection.cpp  problem2dCollection.hpp  problem3d.hpp  problem3dCollection.cpp  problem3dCollection.hpp  problem3dCollectionMovingObstacle.cpp  problem3dCollectionMovingObstacle.hpp  pybind.cpp  threadPool.cpp  threadPool.hpp  utils.hpp
src_bak/: elliposoidAndLogSumExp3dPrb.cpp  elliposoidAndLogSumExp3dPrb.hpp  main.cpp  problem3d.cpp  problem3dCollection.hpp  threadPool.cpp  utils.cpp
